--- a/app/src/main/res/layout/fragment_collapsing_toolbar.xml
+++ b/app/src/main/res/layout/fragment_collapsing_toolbar.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:_android="http://android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -52,6 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/fab_margin"
+        android:contentDescription="@string/email_button"
         app:layout_anchor="@id/ctAppBarLayout"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@android:drawable/ic_dialog_email" />
@@ -59,8 +59,9 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/unused_button"
         android:text="@string/button"
-        app:srcCompat="@android:drawable/ic_dialog_info"
-        app:layout_behavior="com.geekbrains.potd.demo.NestedBehavior" />
+        app:layout_behavior="com.geekbrains.potd.demo.NestedBehavior"
+        app:srcCompat="@android:drawable/ic_dialog_info" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
