--- a/app/src/main/res/layout/fragment_mars.xml
+++ b/app/src/main/res/layout/fragment_mars.xml
@@ -53,7 +53,6 @@
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:text="@string/label_description_loading"
         app:layout_constraintBottom_toTopOf="@id/indicatorLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
-        android:paddingBottom="20dp"
+        android:padding="@dimen/indicator_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -75,22 +74,22 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="7dp"
-            android:layout_marginEnd="7dp"
+            android:layout_marginHorizontal="@dimen/indicator_margin"
+            android:contentDescription="@string/off_indicator"
             android:src="@drawable/ic_indicator_off" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="7dp"
-            android:layout_marginEnd="7dp"
+            android:layout_marginHorizontal="@dimen/indicator_margin"
+            android:contentDescription="@string/off_indicator"
             android:src="@drawable/ic_indicator_off" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="7dp"
-            android:layout_marginEnd="7dp"
+            android:layout_marginHorizontal="@dimen/indicator_margin"
+            android:contentDescription="@string/on_indicator"
             android:src="@drawable/ic_indicator_on" />
     </LinearLayout>
 
