--- a/app/src/main/res/layout/fragment_mars.xml
+++ b/app/src/main/res/layout/fragment_mars.xml
@@ -40,10 +40,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal"
         app:layoutManager="LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@+id/description"
+        app:layout_constraintBottom_toTopOf="@+id/indicatorLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/chipGroup"
@@ -57,7 +57,7 @@
         app:layout_constraintBottom_toTopOf="@id/indicatorLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recyclerView"
+        app:layout_constraintTop_toBottomOf="@id/chipGroup"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <LinearLayout
@@ -92,5 +92,18 @@
             android:contentDescription="@string/on_indicator"
             android:src="@drawable/ic_indicator_on" />
     </LinearLayout>
+
+    <CheckBox
+        android:id="@+id/bookmarkCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/bookmark_button_margin"
+        android:layout_marginBottom="@dimen/bookmark_button_margin"
+        android:button="@drawable/ic_add_bookmark"
+        android:gravity="bottom|end"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
