Удаление закладок типа Mars и EPIC

--- a/app/src/main/res/layout/fragment_bookmarks_item_epic.xml
+++ b/app/src/main/res/layout/fragment_bookmarks_item_epic.xml
@@ -10,6 +10,7 @@
         android:layout_height="@dimen/bookmark_type_icon_size"
         android:layout_margin="@dimen/bookmarks_recycler_item_margins"
         android:contentDescription="@string/earth_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/bg_earth" />
@@ -19,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/bookmarks_recycler_item_margins"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/bookmarkTypeIcon"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,8 +29,20 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/bookmarks_recycler_item_margins"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/deleteBookmarkButton"
         app:layout_constraintStart_toEndOf="@id/bookmarkDate"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/deleteBookmarkButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/bookmark_description"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_clear_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
