--- a/app/src/main/res/layout/fragment_system.xml
+++ b/app/src/main/res/layout/fragment_system.xml
@@ -45,7 +45,7 @@
 
     </com.google.android.material.chip.ChipGroup>
 
-    <ImageView
+    <com.geekbrains.potd.widgets.StretchImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
