--- a/app/src/main/res/layout/fragment_bookmarks_item_potd.xml
+++ b/app/src/main/res/layout/fragment_bookmarks_item_potd.xml
@@ -61,14 +61,28 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <TextView
+        android:id="@+id/bookmarkTitleLower"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/bookmarks_recycler_item_margins"
+        android:layout_marginVertical="@dimen/bookmarks_recycler_item_margins"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainLayout"
+        tools:text="Title text is shorter."
+        tools:visibility="visible" />
+
+    <TextView
         android:id="@+id/bookmarkDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/bookmarks_recycler_item_margins"
         android:layout_marginVertical="@dimen/bookmarks_recycler_item_margins"
         android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainLayout"
+        app:layout_constraintTop_toBottomOf="@id/bookmarkTitleLower"
         tools:text="Description text very long multiline text. Description text very long multiline text. Description text very long multiline text. Description text."
         tools:visibility="visible" />
 
